Thu Jun 22 18:35:00 2000  Ranjith Kumaran  <ranjith@cygnus.com>

	* README: Newlib 1.8.2 must be built in a separate directory
	than the sources.

Tue Jun 20 14:30:00 2000  Jeff Johnston  <jjohnstn@cygnus.com>

        * libc/include/sys/reent.h (_rand_next): Added __extension__
        qualifier as long long type is not strict ANSI.
        * libc/stdlib/rand.c (rand): Added __extension__ qualifier
        to long long constant.

Fri Jun 16 23:02:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * libc/include/sys/unistd.h: Add prototypes for `seteuid' and
        `setegid' provided by Cygwin.

Thu Jun 15  0:21:00 2000  Corinna Vinschen <corinna@vinschen.de>

        * libc/stdio/fdopen.c: Take explicit given bin/textmode into
        account for Cygwin.

Fri Jun  9 14:28:00 2000  Jeff Johnston  <jjohnstn@cygnus.com>

        * libc/include/sys/reent.h (_rand_next): Changed to
        unsigned long long and moved to end of _reent struct in _new union.
        (_REENT_INIT): Changed to move _rand_next initialization.
        * libc/stdlib/rand.c (rand): Changed to use unsigned long long
        linear congruential algorithm that is used by DJGPP.

Thu Jun  8 21:18:00 2000  Ranjith Kumaran  <ranjith@cygnus.com>

	* libc/include/stdlib.h: Set RAND_MAX to __RAND_MAX.
	* libc/include/sys/config.h: Define __RAND_MAX.

Thu Jun  8 17:54:00 2000  Jeff Johnston  <jjohnstn@cygnus.com>

        * libc/stdlib/rand_r.c: New algorithm that meets minimal
        standard.

Fri Jun  2 23:02:11 2000  Christopher Faylor <cgf@cygnus.com>

	* libc/include/string.h: Work around problem with strsignal and gdb.

Tue May 30 13:13:01 2000  Christopher Faylor <cgf@cygnus.com>

	* libc/include/ctype.h: __CYGWIN32__ -> __CYGWIN__
	* libc/include/malloc.h: Ditto.
	* libc/include/process.h: Ditto.
	* libc/include/stdio.h: Ditto.
	* libc/include/stdlib.h: Ditto.
	* libc/include/time.h: Ditto.
	* libc/include/machine/setjmp.h: Ditto.
	* libc/include/sys/errno.h: Ditto.