@@ -25,7 +25,7 @@
 #endif
 
 /* 16 bit integer machines */
-#if defined(__Z8001__) || defined(__Z8002__) || defined(__H8300__) || defined(__H8500__) || defined(__W65__) || defined (__H8300H__) || defined (__H8300S__) || defined (__mn10200__)
+#if defined(__Z8001__) || defined(__Z8002__) || defined(__H8300__) || defined(__H8500__) || defined(__W65__) || defined (__H8300H__) || defined (__H8300S__) || defined (__mn10200__) || defined (__AVR__)
 
 #undef INT_MAX
 #undef UINT_MAX
@@ -71,6 +71,13 @@
 #define _DOUBLE_IS_32BITS
 #define __SMALL_BITFIELDS
 #define __IEEE_LITTLE_ENDIAN
+#endif
+
+#ifdef __AVR__
+#define _DOUBLE_IS_32BITS
+#define __SMALL_BITFIELDS
+#define __IEEE_LITTLE_ENDIAN
+#define _POINTER_INT short
 #endif
 
 #ifdef __TIC80__
